--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,17 +1,25 @@
 <div class="row">
   <div id="header-panel">
     <h1>Flickr Gallery</h1> 
-    <input type="text" ng-model="foo" placeholder="Enter something" />
-    <input type="button" ng-click="fetchPhotos()" value="Search" ng-disabled="foo == null"/>
+    <div style="margin: 0 auto; width: 50%;" id="custom-search-input">
+      <div style="margin-bottom: 20px;" class="input-group col-md-12">
+          <input type="text" class="form-control input-lg" ng-model="query" placeholder="Enter something" />
+          <span class="input-group-btn">
+              <button class="btn btn-primary btn-lg" type="button" ng-click="fetchPhotos()">
+                  <i class="glyphicon glyphicon-search"></i>
+              </button>
+          </span>
+      </div>
+    </div>
   </div>                 
-  <div ng-repeat="item in feeds track by $index">
+  <div ng-repeat="item in feeds | limitTo:10 track by $index">
     <div id="photo-panel" class="col-md-12" >
       <div class="col-md-4">
-        <a ng-href="#/photo/{{$index}}/"><img id="image-style" ng-src="{{item.media.m}}"></a>
+        <a ng-href="#/photo/{{$index}}"><img id="image-style" ng-src="{{item.media.m}}"></a>
       </div>
       <div id="photo-content" class="col-md-7">
-        <h2>{{item.title}}</h2>
-        <h3>Published, {{item.published | date:"MM/dd/yyyy 'at' h:mma"}}</h3>
+        <div style="font-size:30px;">{{item.title}}</div>
+        <div style="font-size:20px;">Published, {{item.published | date:"MM/dd/yyyy 'at' h:mma"}}<div>
         <div id="link-panel">
           <a href="{{item.author}}"><h4>Photo Author</h4></a>
           <a href="{{item.link}}"><h4>View on Flickr</h4></a>
