--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div id="header-panel">
-    <h1>Flickr Gallery</h1> 
+    <h1>Flickr Public Feed</h1> 
     <div style="margin: 0 auto; width: 50%;" id="custom-search-input">
       <div style="margin-bottom: 20px;" class="input-group col-md-12">
-          <input type="text" class="form-control input-lg" ng-model="query" placeholder="Enter something" />
+          <input type="text" class="form-control input-lg" ng-model="query" placeholder="Enter something..." />
           <span class="input-group-btn">
               <button class="btn btn-primary btn-lg" type="button" ng-click="fetchPhotos()">
                   <i class="glyphicon glyphicon-search"></i>
@@ -21,13 +21,14 @@
         <div style="font-size:30px;">{{item.title}}</div>
         <div style="font-size:20px;">Published, {{item.published | date:"MM/dd/yyyy 'at' h:mma"}}<div>
         <div id="link-panel">
-          <a href="{{item.author}}"><h4>Photo Author</h4></a>
+          <a href="https://www.flickr.com/photos/{{item.author_id}}"><h4>Photo Author</h4></a>
           <a href="{{item.link}}"><h4>View on Flickr</h4></a>
         </div>
         <div id='social-icons'>
-          <a href='https://www.facebook.com/sharer/sharer.php?u={{item.link}}"'><img src='../images/facebook.png'/></a>
-          <a href='https://twitter.com/home?status={{item.link}}"'><img src='../images/twitter.png'/></a>
-          <a href='https://pinterest.com/pin/create/button/?url="{{item.link}}"'><img src='../images/pintrest.png'/></a>
+          <a href='https://www.facebook.com/sharer/sharer.php?u={{item.link}}'><img src='../images/facebook.png'/></a>
+          <a href='https://twitter.com/home?status={{item.link}}'><img src='../images/twitter.png'/></a>
+          <a href='https://pinterest.com/pin/create/button/?url={{item.link}}'><img src='../images/pintrest.png'/></a>
+          <div class="g-plusone" data-annotation="inline" data-width="300"><g:plusone></g:plusone></div>
         </div>
       </div>
     </div>
