--- a/app/views/photo.html
+++ b/app/views/photo.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div id="header-panel">
-    <h1>Flickr Gallery</h1> 
+    <h1>Flickr Public Feed</h1> 
     <div style="margin: 0 auto; width: 50%;" id="custom-search-input">
       <div style="margin-bottom: 20px;" class="input-group col-md-12">
           <span class="input-group-btn">
@@ -16,16 +16,16 @@
           <a href="{{chosenPhoto.link}}"><h2>{{chosenPhoto.title}}</h2></a>
         </div>
         <div id="link-panel" class="col-md-12" >
-          <a href="{{chosenPhoto.author}}"><h3>Photo Author</h3></a><h3>Published, {{chosenPhoto.published | date:"MM/dd/yyyy 'at' h:mma"}}</h3>
+          <a href="https://www.flickr.com/photos/{{chosenPhoto.author_id}}"><h3>Photo Author</h3></a><h3>Published, {{chosenPhoto.published | date:"MM/dd/yyyy 'at' h:mma"}}</h3>
         </div>
       </div>
-      <div class="col-md-12" >
+      <div class="col-md-12" style="margin: 50px";>
         <div class="col-md-4">
           <img id="chosen" ng-src="{{chosenPhoto.media.m}}">
         </div>
         <div id="photo-content" class="col-md-7">
           <p>{{chosenPhoto.description}}</p>
-          <button ng-repeat="chosen in photoTags.split(' ') | limitTo:6 track by $index" class="btn btn-primary btn-lg" type="button">{{chosen}}</button>
+          <button style="margin-right:5px;" ng-repeat="chosen in photoTags.split(' ') | limitTo:5 track by $index" class="btn btn-primary btn-lg" type="button">{{chosen}}</button>
         </div>
       </div>
     </div>
