--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -11,7 +11,7 @@ h1 {
 	font-size: 70px;
 	font-weight: 400;
 	text-shadow: 4px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
-	color: #000059;
+	color: #333;
 	margin:20px 0;
 	text-align: center;
 }
@@ -20,7 +20,7 @@ input {
 }
 
 #header-panel {
-	background-color: #9999cc;
+	background-color: #AEC6CF;
     border-radius: 10px;
     margin: 15px;
     padding: 15px 0;
@@ -29,13 +29,12 @@ input {
 }
 
 #photo-panel {
-    background-color: #9999cc;
+    background-color: #AEC6CF;
     border-radius: 10px;
     margin: 15px;
     padding: 30px 0;
     width: 98%;
     text-align: center;
-
 }
 
 #photo-content {
