--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,25 +3,25 @@
     <h1>Flickr Public Feed</h1> 
     <div style="margin: 0 auto; width: 50%;" id="custom-search-input">
       <div style="margin-bottom: 20px;" class="input-group col-md-12">
-          <input type="text" class="form-control input-lg" ng-model="query" placeholder="Enter something..." />
+          <input type="text" id="search-bar" class="form-control input-lg" ng-model="query" placeholder="Enter something..." />
           <span class="input-group-btn">
-              <button class="btn btn-primary btn-lg" type="button" ng-click="fetchPhotos()">
+              <button class="btn btn-primary btn-lg" id="search-button" type="button" ng-click="fetchPhotos()">
                   <i class="glyphicon glyphicon-search"></i>
               </button>
           </span>
       </div>
     </div>
   </div>                 
-  <div ng-repeat="item in feeds | limitTo:10 track by $index">
+  <div ng-repeat="item in feeds | limitTo:limit track by $index">
     <div id="photo-panel" class="col-md-12" >
       <div class="col-md-4">
         <a ng-href="#/photo/{{$index}}"><img id="image-style" ng-src="{{item.media.m}}"></a>
       </div>
       <div id="photo-content" class="col-md-7">
         <div style="font-size:30px;">{{item.title}}</div>
-        <div style="font-size:20px;">Published, {{item.published | date:"MM/dd/yyyy 'at' h:mma"}}<div>
+        <div style="font-size:20px;">Published, {{item.published | date:"MM/dd/yyyy 'at' h:mma"}}</div>
         <div id="link-panel">
-          <a href="https://www.flickr.com/photos/{{item.author_id}}"><h4>Photo Author</h4></a>
+          <a href="https://www.flickr.com/photos/{{$index}}"><h4>Photo Author</h4></a>
           <a href="{{item.link}}"><h4>View on Flickr</h4></a>
         </div>
         <div id='social-icons'>
@@ -33,4 +33,5 @@
       </div>
     </div>
   </div>
+  <button type="button" style="width:100%" class="btn btn-primary btn-lg" ng-click='loadMore()'>Load More</button>
 </div>
