--- a/app/views/photo.html
+++ b/app/views/photo.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng-init="choosePhoto()">
   <div id="header-panel">
     <h1>Flickr Public Feed</h1> 
     <div style="margin: 0 auto; width: 50%;" id="custom-search-input">
@@ -10,7 +10,7 @@
     </div>
   </div>                 
   <div>
-    <div id="photo-panel" class="col-md-12" >
+    <div id="photo-panel" class="col-md-12">
       <div id="inner-panel">
         <div id="link-panel" class="col-md-12" >
           <a href="{{chosenPhoto.link}}"><h2>{{chosenPhoto.title}}</h2></a>
