Updated bower.json and added comments to code

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -31,5 +31,5 @@
       </div>
     </div>
   </div>
-  <button type="button" style="width:100%" class="btn btn-primary btn-lg" ng-click='loadMore()'>Load More</button>
+  <button id="load-more" type="button" style="width:100%" class="btn btn-primary btn-lg" ng-click='loadMore()'>Load More</button>
 </div>
