--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -40,6 +40,7 @@ input {
 #image-style, #chosen {
 	border-radius: 5px;
 	border: 2px solid #fff;
+	margin-bottom: 20px;
 }
 
 #chosen:hover{
@@ -61,11 +62,16 @@ input {
         display: inline-block;
     }
     #photo-content {
-    	text-align: left;
+    	text-align: left !important;
+	}
+	#inner-panel {
+		text-align: left;
+		margin-left: 100px !important;
 	}
 }
+
 #photo-content {
-	margin-top: 20px;
+	text-align: center;
 }
 
 #social-icons img {
@@ -80,15 +86,16 @@ input {
 
 #link-panel {
 	display: inline-flex;
+	text-align: center;
 }
 
-#flickr-link, #photo-author {
+#flickr-link, #photo-author, #publish-date {
 	margin-right: 15px;
 }
 
 #inner-panel {
-	text-align: left;
-	margin-left: 100px;
+	text-align: center;
+	margin-left: 0px;
 }
 
 
