--- a/app/views/main.html
+++ b/app/views/main.html
@@ -20,7 +20,7 @@
       <div id="photo-content" class="col-md-7">
         <div style="font-size:30px;">{{item.title}}</div>
         <a id="photo-author" href="https://www.flickr.com/photos/{{$index}}"><h4>Photo Author</h4></a>
-        <div id="publish-date" style="font-size:20px;">Published, {{item.published | date:"MM/dd/yyyy 'at' h:mma"}}</div>
+        <div id="publish-date" style="font-size:20px;">Published, {{item.published | date:'medium'}}</div>
         <a id="flickr-link" href="{{item.link}}"><h4>View on Flickr</h4></a>
         <div id='social-icons'>
           <a href='https://www.facebook.com/sharer/sharer.php?u={{item.link}}'><img src='../images/facebook.png'/></a>
