--- a/app/views/photo.html
+++ b/app/views/photo.html
@@ -16,7 +16,7 @@
           <a href="{{chosenPhoto.link}}"><h2>{{chosenPhoto.title}}</h2></a>
         </div>
         <div id="link-panel" class="col-md-12" >
-          <a href="https://www.flickr.com/photos/{{chosenPhoto.author_id}}"><h3>Photo Author</h3></a><h3>&nbsp| Published, {{chosenPhoto.published | date:"MM/dd/yyyy 'at' h:mma"}}</h3>
+          <a href="https://www.flickr.com/photos/{{chosenPhoto.author_id}}"><h3>Photo Author</h3></a><h3>&nbsp| Published, {{chosenPhoto.published | date:"medium"}}</h3>
         </div>
       </div>
       <div class="col-md-12" style="margin: 50px";>
