--- a/app/views/main.html
+++ b/app/views/main.html
@@ -19,9 +19,14 @@
       </div>
       <div id="photo-content" class="col-md-7">
         <div style="font-size:30px;">{{item.title}}</div>
-        <a id="photo-author" href="https://www.flickr.com/photos/{{$index}}"><h4>Photo Author</h4></a>
-        <div id="publish-date" style="font-size:20px;">Published, {{item.published | date:'medium'}}</div>
-        <a id="flickr-link" href="{{item.link}}"><h4>View on Flickr</h4></a>
+        <div id="photo-details">
+          <div id="publish-date"><h4>Published, {{item.published | date:'medium'}}</h4></div>
+          <div id="link-panel">
+            <a id="flickr-link" href="https://www.flickr.com/photos/{{$index}}"><h4>Photo Author</h4></a>
+            <div id="publish-date-mid"><h4>Published, {{item.published | date:'medium'}}</h4></div>
+            <a id="flickr-link" href="{{item.link}}"><h4>View on Flickr</h4></a>
+          </div>
+        </div>
         <div id='social-icons'>
           <a href='https://www.facebook.com/sharer/sharer.php?u={{item.link}}'><img src='../images/facebook.png'/></a>
           <a href='https://twitter.com/home?status={{item.link}}'><img src='../images/twitter.png'/></a>
