--- a/app/views/photo.html
+++ b/app/views/photo.html
@@ -4,7 +4,7 @@
     <div style="margin: 0 auto; width: 50%;" id="custom-search-input">
       <div style="margin-bottom: 20px;" class="input-group col-md-12">
           <span class="input-group-btn">
-              <a href="#/main"><button class="btn btn-primary btn-lg" type="button">Back</button></a>
+              <a href="#/main"><button class="btn btn-primary btn-lg" ng-submit="fetchPhotos()" type="submit">Back</button></a>
           </span>
       </div>
     </div>
